--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,12 @@
             <version>${junit-version}</version>
 
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.38</version>
+            <scope>test</scope>
+        </dependency>
 
     </dependencies>
     <build>
